# newsletter_app

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.circleci/: config.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: common.rs  domain.rs  health_check.rs  subscriptions.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
