[package]
name = "newsletter_app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
reqwest = "0.12.3"
